# ecom-user-service

./: .env.sample  Dockerfile  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_03_04_0009-ddcc2f98c772_add_user.py
ecom_user_service/: app.py  config.py  enums.py  security.py
ecom_user_service/containers/: application.py  gateways.py  repositories.py  services.py
ecom_user_service/exceptions/: auth.py  base.py
ecom_user_service/gateways/: db.py
ecom_user_service/models/: base.py  user.py
ecom_user_service/repositories/: base.py  user.py
ecom_user_service/routers/: root.py
ecom_user_service/routers/v1/: __init__.py  auth.py  user.py
ecom_user_service/schemas/: auth.py  base.py  user.py
ecom_user_service/services/: auth.py  user.py
